syntax = "proto3";

option csharp_namespace = "Hostel.gRPCService";

package room;

service RoomProvider {
  rpc GetRooms (RoomRequest) returns (RoomReply);
}
 
message RoomRequest {
}
 
message RoomReply {
  repeated Room rooms = 1;
}

message Room {
  int32 id = 1;
  int32 MaxResidentsCount = 2;
  int32 floor = 3;
  int32 number = 4;
}