syntax = "proto3";

option csharp_namespace = "Hostel.gRPCService";

package roomresident;

service RoomResidentProvider {
  rpc GetRoomResidents (RoomResidentRequest) returns (RoomResidentReply);
}
 
message RoomResidentRequest {
}
 
message RoomResidentReply {
  repeated RoomResident roomResidents = 1;
}

message RoomResident {
  int32 id = 1;
  int32 roomId = 2;
  int32 residentId = 3;
  string settleDate = 4;
  string evictDate = 5;
}